--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -57,6 +57,13 @@ h6 {
   margin-left: 10px;
 }
 
+select {
+  display: block;
+  width: 95%;
+  margin: auto;
+  padding: .8em;
+}
+
 
 .main {
   margin: 20px 10px;
